# semantic-mdm-demo

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: finance_terms.json  legal_terms.json  restdev_terms.json  taxonomy.json
utils/: taxonomy_viz.py  vector_search.py
